--- a/Cicero/Cicero.Core/Cicero.Core.csproj
+++ b/Cicero/Cicero.Core/Cicero.Core.csproj
@@ -50,11 +50,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataObjects\CiceroContext.cs" />
+    <Compile Include="DataObjects\Client.cs" />
+    <Compile Include="DataObjects\RefreshToken.cs" />
     <Compile Include="DataObjects\User.cs" />
     <Compile Include="Helpers\Membership\PasswordHelper.cs" />
     <Compile Include="Migrations\201702172238159_AddedUserObject.cs" />
     <Compile Include="Migrations\201702172238159_AddedUserObject.Designer.cs">
       <DependentUpon>201702172238159_AddedUserObject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702180909039_AddedClientsRefreshTokens.cs" />
+    <Compile Include="Migrations\201702180909039_AddedClientsRefreshTokens.Designer.cs">
+      <DependentUpon>201702180909039_AddedClientsRefreshTokens.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,6 +72,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201702172238159_AddedUserObject.resx">
       <DependentUpon>201702172238159_AddedUserObject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702180909039_AddedClientsRefreshTokens.resx">
+      <DependentUpon>201702180909039_AddedClientsRefreshTokens.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
