added error logging + signup page

--- a/Cicero/Cicero.Api/Cicero.Api.csproj
+++ b/Cicero/Cicero.Api/Cicero.Api.csproj
@@ -146,8 +146,10 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ClientsController.cs" />
+    <Compile Include="Controllers\ErrorLogsController.cs" />
     <Compile Include="Controllers\RefreshTokensController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Filters\ExceptionHandlerFilterAttribute.cs" />
     <Compile Include="Helpers\MembershipHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
